# glean

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DEPLOY.zh-CN.md  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.lite.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-frontend.yml  release.yml
backend/: CLAUDE.md  Dockerfile  conftest.py  pyproject.toml
backend/apps/api/glean_api/: dependencies.py
backend/apps/api/glean_api/routers/: admin.py  bookmarks.py  feeds.py  folders.py  tags.py
backend/apps/api/tests/: test_admin_api.py
backend/apps/worker/glean_worker/tasks/: bookmark_metadata.py  cleanup.py  feed_fetcher.py
backend/scripts/: create-admin.py  entrypoint.sh
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_entries_api.py  test_feeds_api.py  test_m2_api.py
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
frontend/: CLAUDE.md  eslint.config.js  package.json  pnpm-lock.yaml
frontend/apps/admin/: .env.example  Dockerfile  package.json
frontend/apps/admin/src/: App.tsx  main.tsx
frontend/apps/admin/src/components/: Layout.tsx
frontend/apps/admin/src/lib/: api.ts
frontend/apps/admin/src/pages/: LoginPage.tsx  SettingsPage.tsx  UsersPage.tsx
frontend/apps/admin/src/stores/: languageStore.ts
frontend/apps/web/: Dockerfile  ELECTRON.md  electron-builder.json5  package.json  vite.config.ts
frontend/apps/web/electron/: config-preload.ts  config.html  main.ts  preload.ts
frontend/apps/web/src/: electron.d.ts
frontend/apps/web/src/components/: ArticleOutline.tsx  Layout.tsx
frontend/apps/web/src/components/tabs/: SubscriptionsTab.tsx
frontend/apps/web/src/lib/: html.ts
frontend/apps/web/src/pages/: BookmarksPage.tsx  ReaderPage.tsx  RegisterPage.tsx  SettingsPage.tsx  SubscriptionsPage.tsx
scripts/: create-admin.py  setup.sh
